# fast_zero

./: .gitignore  README.md  pyproject.toml
fast_zero/: __init__.py  app.py  database.py  models.py  schemas.py  security.py  settings.py
migrations/: env.py
migrations/versions/: 31b82810ae82_including_new_fields_to_user_table.py  cfe66a0d5e04_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py
